# pair-up

./: .gitignore  README.md  pyproject.toml  run.sh  streamlit_app.py  update.sh  viz.html
docker/pair_up/: Dockerfile  docker-compose.yaml
docker/streamlit/: Dockerfile  docker-compose.yaml
pairup/: __init__.py  configuration.py  graphs.py  introduction.py  llm_api.py  overview.py  parsing.py  problems.py  review.py  tasks.py  test.py  util.py  viz.py
tests/: test_query_parsing.py
